# alphacalc

./: CMakeLists.txt  README.md  setup.py
src/: .gitignore
src/annealing_helpers/: __init__.py  alpha_intersect.cpp  alpha_intersect.h  bindings.cpp
